Modificando primer documento
Omar Orozco

--- a/pruebaMax.html
+++ b/pruebaMax.html
@@ -8,5 +8,6 @@
 </head>
 <body>
 	<h1>This is a testing for Phisics class, my name is Maximilian Belmont</h1>
+	<h1>This is a second testing for Phisics class, my name is Omar Orozco Valencia</h1>
 </body>
 </html>
