--- a/PruebaOmar.html
+++ b/PruebaOmar.html
@@ -1,5 +1,7 @@
 <html>
     <body>
         <h1>Omar Orozco Valencia Clase de fisica, sexto semestre</h1>
+        <h1>Maximiliano Belmonte Loeza Clase de fisica, sexto semestre</h1>
+
     </body>
 </html>
