--- a/PruebaOmar.html
+++ b/PruebaOmar.html
@@ -2,6 +2,7 @@
     <body>
         <h1>Omar Orozco Valencia Clase de fisica, sexto semestre</h1>
         <h1>Maximiliano Belmonte Loeza Clase de fisica, sexto semestre</h1>
+        <h1>Pelon</h1>
 
     </body>
 </html>
