--- a/Conflicto.html
+++ b/Conflicto.html
@@ -1,11 +1,9 @@
 <html>
     <body>
-        dsfh 
-dhfh hdgs hdfs gdfsg
-        Buenos dias señores como estan ustedes, ¡CHINGEN A SU MADRE! hombres y mujeres vamos a bailar vamos a bailar el mono de alambre
-
-        asdkfljdas fhjsaf}
-
-        jaslñfashfausp
+kjdfl <ggndfgdf class="gdfkjgkljdsfg">
+    dgfklsjgdfjglñdsf
+    gdfkjljdfsglm
+    gsfklgjdfdgjkldñf
+</ggndfgdf>
     </body>
 </html> 
