--- a/Conflicto.html
+++ b/Conflicto.html
@@ -2,10 +2,8 @@
     <body>
         dsfh 
 dhfh hdgs hdfs gdfsg
-        Buenos dias señores como estan ustedes, ¡CHINGEN A SU MADRE! hombres y mujeres vamos a bailar vamos a bailar el mono de alambre
-
-        asdkfljdas fhjsaf}
-
-        jaslñfashfausp
+        Buenos dias señores como estan ustedes, ¡CHINGEN A SU MADRE! nuiedwhujiaesdujhujikhuducnajnakcnj
+        dnqwiokdnsajihdniwkbndhauDPNJWJAIUDGBAWYUHBDGAYUWDBASUJIB
+        DNMAKOISNDOKAWIJDNJOISKABNDWJAIÑUBDAUSOÑ
     </body>
 </html> 
