--- a/Conflicto.html
+++ b/Conflicto.html
@@ -1,9 +1,11 @@
 <html>
     <body>
-kjdfl <ggndfgdf class="gdfkjgkljdsfg">
-    dgfklsjgdfjglñdsf
-    gdfkjljdfsglm
-    gsfklgjdfdgjkldñf
-</ggndfgdf>
+        dsfh 
+dhfh hdgs hdfs gdfsg
+        Buenos dias señores como estan ustedes, ¡CHINGEN A SU MADRE! hombres y mujeres vamos a bailar vamos a bailar el mono de alambre
+
+        asdkfljdas fhjsaf}
+
+        jaslñfashfausp
     </body>
 </html> 
