Revert "Merge branch 'main' of https://github.com/Omar-UDEM/EquipoTostada"
This reverts commit b006bdc168602b498e6cb654a48ffb48585f3956, reversing
changes made to 5280939c933c51a50f7a6f4510f77a49afa5af69.

--- a/Conflicto.html
+++ b/Conflicto.html
@@ -1,6 +1,11 @@
 <html>
     <body>
+        dsfh 
+dhfh hdgs hdfs gdfsg
+        Buenos dias señores como estan ustedes, ¡CHINGEN A SU MADRE! hombres y mujeres vamos a bailar vamos a bailar el mono de alambre
 
-a5f332173d46cf69568c5769d906e3932b9e7706c
+        asdkfljdas fhjsaf}
+
+        jaslñfashfausp
     </body>
 </html> 
