--- a/Conflicto.html
+++ b/Conflicto.html
@@ -1,16 +1,5 @@
 <html>
     <body>
-        dsfh 
-dhfh hdgs hdfs gdfsg
-        Buenos dias señores como estan ustedes, ¡CHINGEN A SU MADRE! hombres y mujeres vamos a bailar vamos a bailar el mono de alambre
-
-        asdkfljdas fhjsaf}
-
-        jaslñfashfausp
-        azap
-        flush
-        pas
-        wam
-        boooooooooooooooooooooom
+        hola guapo
     </body>
 </html> 
